# pydantable

./: .gitignore  .readthedocs.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  pyrightconfig-strict.json  pyrightconfig.json
.github/workflows/: _shared-ci.yml  ci.yml  fastapi-cloud-deploy.yml  rag-database.yml  release.yml
benchmarks/: framed_window_bench.py  micro_collect_only.py  phase5_collect_baseline.py  profile_breakdown.py  pydantable_vs_pandas.py  pydantable_vs_polars.py  pyperf_native_materialize.py  run_release.sh  trusted_polars_ingest_bench.py
docs/: ADR-engines.md  ARCHITECTURE.md  BACKENDS.md  BEANIE.md  CHANGELOG.md  COVERAGE_BACKLOG.md  CUSTOM_ENGINE_PACKAGE.md  DATAFRAMEMODEL.md  DATA_IO_SOURCES.md  DEVELOPER.md  DOCS_MAP.md  DOCS_STYLE_GUIDE.md  EXECUTION.md  FASTAPI.md  FASTAPI_ADVANCED.md  FASTAPI_ENHANCEMENTS.md  GOLDEN_PATH_FASTAPI.md  INTERFACE_CONTRACT.md  IO_CSV.md  IO_DECISION_TREE.md  IO_EXTRAS.md  IO_HTTP.md  IO_IPC.md  IO_JSON.md  IO_NDJSON.md  IO_OVERVIEW.md  IO_PARQUET.md  IO_SQL.md  ISP_ENGINE_PROTOCOL_RFC.md  MATERIALIZATION.md  MIGRATION_1_to_2.md  MOLTRES_SQL.md  MONGO_ENGINE.md  PANDAS_UI.md  PARITY_SCORECARD.md  PERFORMANCE.md  PLANFRAME_ADAPTER_ROADMAP.md  PLANFRAME_FALLBACKS.md  PLANFRAME_TYPING_ROADMAP.md  PLAN_AND_PLUGINS.md  (+32 more)
docs/_static/: custom.css
docs/api/: afetch_beanie.md  aiter_beanie.md  awrite_beanie.md  beanie_write_options.md  coalesce.md  column_ref.md  concat.md  dataframe.md  dataframemodel.md  expr.md  index.md  index.rst  plan_materialization.md  plan_materialization_summary.md  pydantable.BeanieWriteOptions.rst  pydantable.DataFrame.rst  pydantable.DataFrameModel.rst  pydantable.Expr.rst  pydantable.PlanMaterialization.rst  pydantable.Schema.rst  pydantable.afetch_beanie.rst  pydantable.aiter_beanie.rst  pydantable.awrite_beanie.rst  pydantable.expressions.ColumnRef.rst  pydantable.expressions.coalesce.rst  pydantable.expressions.concat.rst  pydantable.expressions.when.rst  pydantable.plan_materialization_summary.rst  schema.md  when.md
entei-core/: README.md  pyproject.toml
entei-core/python/entei_core/: __init__.py  _materialize.py  dataframe.py  engine.py  mongo_root.py
entei-core/tests/: test_entei_engine.py
notebooks/: five_minute_tour.ipynb
pydantable/: __init__.py  edit_model.py  strict_table.py  validate.py
pydantable-core/: Cargo.toml  deny.toml
pydantable-core/benches/: collect_lazyframe.rs  materialize_series.rs
pydantable-core/src/: dtype.rs  expr.rs  io_polars.rs  lib.rs  plan.rs  polars_dtype.rs  py_datetime.rs
pydantable-core/src/expr/: eval_rowwise.rs  eval_rowwise_errors.rs  ir.rs  lower_polars.rs  mod.rs  py_literal.rs  rowwise_support.rs  serialize.rs  tests.rs  typing.rs
pydantable-core/src/expr/typing/: helpers.rs  impl_body.inc  impl_expr_node.rs  impl_imports.txt  impl_shard_analysis.inc  impl_shard_constructors.inc  impl_shard_infer.inc  impl_shard_window_map_eval.inc  mod.rs
pydantable-core/src/plan/: build.rs  context.rs  execute_polars.rs  execute_rowwise.rs  executor.rs  ir.rs  mod.rs  schema_py.rs  serialize.rs  tests.rs
pydantable-core/src/plan/execute_polars/: common.rs  concat_exec.rs  groupby_exec.rs  join_exec.rs  literal_agg.rs  materialize.rs  mod.rs  reshape_exec.rs  root_lazy.rs  runner.rs  scan_kw.rs  setops_exec.rs
pydantable-core/src/plan/executor/: mod.rs
pydantable-core/src/plan/executor/polars_executor/: execute.rs  groupby.rs  join.rs  mod.rs  reshape.rs  setops.rs
pydantable-core/src/python_api/: async_fns.rs  exec_fns.rs  expr_fns.rs  io_fns.rs  mod.rs  plan_fns.rs  types.rs
pydantable-core/src/python_api/exec_fns/: execute.rs  mod.rs  physical.rs  sinks.rs
pydantable-meta/: README.md  pyproject.toml
pydantable-native/: README.md  pyproject.toml
pydantable-native/python/pydantable_native/: __init__.py  _binding.py  _trace.py  capabilities.py  io_core.py  native.py
pydantable-protocol/: README.md  pyproject.toml
pydantable-protocol/python/pydantable_protocol/: __init__.py  exceptions.py  protocols.py
pydantable-rag/: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  pyproject.toml
pydantable-rag/app/: main.py  openai_env.py  rtd_links.py  settings.py  version.py
pydantable-rag/app/rag/: chunking.py  embeddings.py  ingest.py  llm.py  pipeline.py  store.py  torch_cpu.py  upstream_fetch.py
pydantable-rag/data/: pydantable_vectors.db
pydantable-rag/scripts/: build_index_ci.py  fetch_upstream_docs.py  ingest.py  prep_hf_cache_ci.py
pydantable-rag/tests/: conftest.py  test_api.py  test_chat_app.py  test_openai_llm.py  test_pipeline_extractive.py  test_rtd_links.py
scripts/: __init__.py  check_docs_api_rst.py  check_engine_bypass.py  check_planframe_dfm_legacy_returns.py  ci_print_dev_extras.py  fix_mkdocs_internal_links.py  generate_typing_artifacts.py  migrate_docs_myst_to_mkdocs.py  run_docs_example_scripts.py  update_docs_example_outputs.py  verify_doc_examples.py
tests/: README.md  __init__.py  conftest.py  test_advanced_ops_phase6.py  test_arrow_interchange.py  test_async_materialization.py  test_backend_equivalence_smoke.py  test_batches_chain.py  test_coverage_quick_wins.py  test_csv_scan_directory_b2.py  test_custom_dtypes_phase3.py  test_dataframe_consortium_standard.py  test_dataframe_discovery.py  test_dataframe_interchange_protocol.py  test_dataframe_model.py  test_dataframe_model_as_model_variants.py  test_dataframe_model_parity.py  test_dataframe_ops.py  test_dataframe_repr.py  test_decimal_scalar.py  test_describe_dtype_coverage.py  test_display_options.py  test_doc_io_examples.py  test_docs_example_scripts.py  test_engine_contract.py  test_engine_parity_matrix.py  test_engine_stub.py  test_enum_scalar.py  test_execution_engine_phase5.py  test_explain_plan.py  test_expr_070_surfaces.py  test_expr_nullable.py  test_expr_repr.py  test_expressions.py  test_expressions_edge_cases.py  test_extended_scalar_dtypes_v12.py  test_fastapi_input_aliases_phase5.py  test_fastapi_openapi_phase5.py  test_fastapi_recipes.py  test_global_agg.py  (+87 more)
tests_v2/: test_strict_contract.py
(+451 files in other folders)
