[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "pydantable"
version = "1.1.0"
description = "Strongly-typed DataFrames for Python, powered by Rust."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0,<3",
    "typing-extensions>=4.7",
]

[project.optional-dependencies]
arrow = ["pyarrow>=14.0"]
polars = ["polars>=1.0.0,<2"]
io = ["pyarrow>=14.0", "polars>=1.0.0,<2"]
# read_sql / write_sql — SQLAlchemy 2.x; install DBAPI drivers for your URLs separately.
sql = ["sqlalchemy>=2.0,<3"]
cloud = ["fsspec>=2023.0"]
excel = ["openpyxl>=3.1"]
kafka = ["kafka-python>=2.0"]
bq = ["google-cloud-bigquery>=3.0"]
snowflake = ["snowflake-connector-python>=3.0"]
rap = ["rapcsv>=0.2", "rapfiles>=0.1", "rapsqlite>=0.1"]
dev = [
    "fastapi>=0.100",
    "httpx>=0.24",
    "sqlalchemy>=2.0,<3",
    "python-multipart>=0.0.6",
    "hypothesis>=6.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "coverage[toml]>=7.0",
    "polars>=1.0.0,<2",
    "streamlit>=1.30,<2",
    "dataframe-api-compat>=0.2.7",
    "fsspec>=2023.0",
    "google-cloud-bigquery>=3.0",
    "kafka-python>=2.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "rapcsv>=0.2",
    "rapfiles>=0.1",
    "rapsqlite>=0.1",
    "snowflake-connector-python>=3.0",
]
benchmark = [
    "maturin>=1.4,<2.0",
    "pandas>=2.0",
    "polars>=1.0.0,<2",
]
pandas = ["pandas>=2.0"]
docs = [
    "sphinx",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    # Optional at runtime, but required for Sphinx + sphinx-autodoc-typehints to resolve
    # SQLAlchemy forward refs on DataFrameModel I/O methods (matches CI docs job and RTD).
    "sqlalchemy>=2.0,<3",
]

[tool.maturin]
# Builds `pydantable._core` from the Rust crate in `pydantable-core/`.
manifest-path = "pydantable-core/Cargo.toml"
module-name = "pydantable._core"
python-source = "python"
include = [
    "python/pydantable/py.typed",
    "python/pydantable/__init__.pyi",
    "python/pydantable/dataframe_model.pyi",
]
features = ["pyo3/extension-module", "polars_engine"]
exclude = [
    "docs/_build",
    "docs/_build/**",
    "site",
    "site/**",
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "TID", "RUF"]

[tool.ruff.lint.per-file-ignores]
"python/pydantable/io/**/*.py" = ["E501"]
"tests/test_io_comprehensive.py" = ["TC003"]
"tests/test_io_extras_and_transports.py" = ["TC003", "E501", "RUF012"]
"tests/test_io_improvements.py" = ["TC003", "E501"]

[tool.mypy]
python_version = "3.10"
mypy_path = "python"
explicit_package_bases = true
# Mypy plugin enables automatic schema-evolving return typing for DataFrameModel
# transform chains. Pyright/Pylance relies on the shipped stubs + `as_model(...)`.
plugins = ["python/pydantable/mypy_plugin.py"]

# Tests use parametrized UI bases and column attrs that are Expr at runtime but
# look like optional scalars to static analysis; typecheck the package only.
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Optional runtime deps: CI python-lint job does not install them; imports are guarded.
[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "polars"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dataframe_api_compat"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dataframe_api_compat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fsspec"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kafka"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.bigquery"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "snowflake.connector"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "snowflake"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapcsv"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapfiles"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.dataset"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.orc"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: performance guardrails (timing-based; exclude with -m 'not slow')",
    "network: uses loopback HTTP server or similar (exclude with -m 'not network')",
    "optional_cloud: requires optional cloud/extra deps (may skip via importorskip)",
]

[tool.coverage.run]
branch = true
source = ["python/pydantable"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

