[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantable"
version = "1.18.1"
description = "Strongly-typed DataFrames for Python, powered by Rust."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0,<3",
    "pydantable-protocol==1.18.1",
    "pydantable-native==1.18.1",
    "typing-extensions>=4.7",
]

[project.optional-dependencies]
arrow = ["pyarrow>=14.0"]
polars = ["polars>=1.0.0,<2"]
io = ["pyarrow>=14.0", "polars>=1.0.0,<2"]
# read_sql / write_sql — SQLAlchemy 2.x; install DBAPI drivers for your URLs separately.
# fetch_sqlmodel / iter_sqlmodel require SQLModel. Same extra includes lazy ``SqlDataFrame`` /
# ``SqlDataFrameModel`` (moltres-core bridge) + ``greenlet`` for SQLAlchemy async helpers.
# Install DB-API drivers for your URLs separately (``psycopg``, ``aiosqlite``, optional ``rapsqlite``, …).
sql = [
    "sqlalchemy>=2.0,<3",
    "sqlmodel>=0.0.22,<0.1",
    "moltres-core>=1.0.0,<2",
    "greenlet>=3.0",
]
cloud = ["fsspec>=2023.0"]
excel = ["openpyxl>=3.1"]
kafka = ["kafka-python>=2.0"]
bq = ["google-cloud-bigquery>=3.0"]
snowflake = ["snowflake-connector-python>=3.0"]
rap = ["rapcsv>=0.2", "rapfiles>=0.1", "rapsqlite>=0.1"]
# FastAPI integration helpers (pydantable.fastapi); optional at runtime.
fastapi = ["fastapi>=0.100"]
# MongoDB: PyMongo + Beanie + optional Mongo plan roots (``sync_pymongo_collection``, ``MongoDataFrame.from_beanie``).
mongo = ["entei-core>=0.2.0,<0.3", "pymongo>=4.6", "beanie>=1.24,<3"]
# Spark: `SparkDataFrame` / `SparkDataFrameModel` (raikou-core bridge) + SparkDantic schemas.
# NOTE: Spark 4.x requires newer Java; we pin <4 for broad compatibility.
spark = [
    "raikou-core==0.1.0",
    "pyspark>=3.4,<4",
    "sparkdantic>=2.0,<3",
]
dev = [
    "tomli>=1.2.0; python_version < '3.11'",
    "fastapi>=0.100",
    "httpx>=0.24",
    # SQLAlchemy + SQLModel — same pins as ``[sql]``; needed for sql/sqlmodel I/O tests and dev workflows.
    "sqlalchemy>=2.0,<3",
    "sqlmodel>=0.0.22,<0.1",
    "python-multipart>=0.0.6",
    "hypothesis>=6.0",
    "mongomock>=4.1",
    "pymongo>=4.6",
    "jinja2>=3.1",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    # Weekly randomized-order suite in CI (``python-tests-random-order``).
    "pytest-randomly>=3.0",
    "ruff>=0.8.0",
    "ty>=0.0.28",
    "mypy>=1.0",
    "pyright>=1.1.0",
    "coverage[toml]>=7.0",
    "diff-cover>=9.0",
    "polars>=1.0.0,<2",
    "streamlit>=1.30,<2",
    "dataframe-api-compat>=0.2.7",
    "fsspec>=2023.0",
    "google-cloud-bigquery>=3.0",
    "kafka-python>=2.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "rapcsv>=0.2",
    "rapfiles>=0.1",
    "rapsqlite>=0.1",
    "snowflake-connector-python>=3.0",
    # Mongo: entei-core + pymongo (``tests/mongo/``; same pin as ``[mongo]``).
    "entei-core>=0.2.0,<0.3",
    # Beanie — bundled in ``[mongo]``; listed for dev installs that do not use ``-e ".[mongo]"``.
    "beanie>=1.24,<3",
    # SqlDataFrame / SqlDataFrameModel tests (same pin as optional ``[sql]``).
    "moltres-core>=1.0.0,<2",
    # SQLAlchemy ``create_async_engine`` (rapsqlite smoke test in ``tests/sql/test_sql_moltres.py``).
    "greenlet>=3.0",
    # SparkDantic (same pin as optional ``[spark]``); JVM schema helpers in ``pydantable.pyspark.sparkdantic``.
    "sparkdantic>=2.0,<3",
]
benchmark = [
    "maturin>=1.4,<2.0",
    "pandas>=2.0",
    "polars>=1.0.0,<2",
]
pandas = ["pandas>=2.0"]
docs = [
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.25,<1",
    "mkdocstrings-python>=1.10,<2",
    "pymdown-extensions>=10.14,<11",
    # Optional at runtime, but required for mkdocstrings to resolve
    # SQLAlchemy forward refs on DataFrameModel I/O methods (matches CI docs job and RTD).
    "sqlalchemy>=2.0,<3",
    "sqlmodel>=0.0.22,<0.1",
    # Mongo modules (``mongo_dataframe`` / ``mongo_dataframe_engine`` / ``mongo_beanie``) for mkdocstrings (CI ``docs`` job and RTD; same pins as ``[mongo]``).
    "entei-core>=0.2.0,<0.3",
    "pymongo>=4.6",
    "beanie>=1.24,<3",
    # Spark modules (``spark_dataframe``) for mkdocstrings / RTD imports (same pins as ``[spark]``).
    "raikou-core==0.1.0",
    "pyspark>=3.4,<4",
    "sparkdantic>=2.0,<3",
]

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]

# Astral ``ty`` — primary static type checker in ``make check-full`` / CI (fast; no mypy plugins).
# Optional-import stubs and UI shims match the pragmatism of the historical mypy + Pyright split:
# Pyright still type-checks the typing contract tests; mypy remains available for the plugin
# (``tests/test_mypy_*.py``) and ``[tool.mypy]`` config.
[tool.ty.environment]
python-version = "3.10"
root = ["python", "pydantable-protocol/python", "pydantable-native/python"]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "pydantable_native._core",
    "numpy.**",
    "pyarrow.**",
    "polars.**",
    "pandas.**",
    "dataframe_api_compat.**",
    "sqlalchemy.**",
    "sqlmodel.**",
    "openpyxl.**",
    "fsspec.**",
    "kafka.**",
    "google.cloud.**",
    "snowflake.**",
    "rapcsv.**",
    "rapfiles.**",
    "fastapi.**",
    "starlette.**",
    "moltres_core.**",
    "rapsqlite.**",
    "pyspark.**",
    "raikou_core.**",
    "sparkdantic.**",
]

[tool.ty.rules]
invalid-method-override = "ignore"
invalid-assignment = "ignore"
unresolved-attribute = "ignore"
no-matching-overload = "ignore"
isinstance-against-typed-dict = "ignore"
not-iterable = "ignore"
invalid-context-manager = "ignore"
invalid-argument-type = "error"
invalid-return-type = "error"
unknown-argument = "error"
unsupported-operator = "error"

[tool.ty.src]
include = [
    "python/pydantable/**",
    "pydantable-protocol/python/pydantable_protocol/**",
    "pydantable-native/python/pydantable_native/**",
]
exclude = [
    "python/pydantable/mypy_plugin.py",
    "python/pydantable/pyspark/**",
    "python/pydantable/pandas.py",
    "python/pydantable/pandas.pyi",
    "notebooks/**",
    ".venv-mypy-min/**",
    ".venv-ty-min/**",
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["notebooks", ".venv", ".venv310", ".venv-mypy-min", ".venv-ty-min"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "TID", "RUF"]

[tool.ruff.lint.per-file-ignores]
"python/pydantable/io/**/*.py" = ["E501"]
"tests/io/test_io_comprehensive.py" = ["TC003"]
"tests/io/test_io_extras_and_transports.py" = ["TC003", "E501", "RUF012"]
"tests/io/test_io_improvements.py" = ["TC003", "E501"]
"tests/typing/test_typing_module_runtime.py" = ["TC003"]
"tests/dataframe/test_async_materialization.py" = ["TC003"]
"python/pydantable/testing/**/*.py" = ["TC003"]
"python/pydantable/sql_moltres.py" = ["TC003"]
"python/pydantable/sql_dataframe.py" = ["TC003"]
"python/pydantable/mongo_dataframe.py" = ["TC003", "F822"]
"python/pydantable/mongo_entei.py" = ["TC003", "F822"]
"python/pydantable/mongo_beanie.py" = ["TC003"]
"python/pydantable/pandas_moltres.py" = ["TC003"]
"python/pydantable/pandas_sql_dataframe.py" = ["TC003"]
"python/pydantable/pyspark/sql_moltres.py" = ["TC003", "TC001"]
"python/pydantable/pyspark/sql_dataframe.py" = ["TC003", "TC001"]
"python/pydantable/dataframe/_execution_handle.py" = ["TC003"]
"python/pydantable/dataframe/_materialize_scan_fallback.py" = ["TC003"]
"python/pydantable/dataframe/grouped.py" = ["TC003"]
"tests/fastapi/test_pydantable_fastapi_columnar.py" = ["TC003"]
"tests/sql/test_sql_moltres.py" = ["TC003"]
"tests/mongo/**/*.py" = ["TC003"]
# ``__all__`` lists lazy ``SqlDataFrame`` / ``SqlDataFrameModel`` from ``__getattr__``.
"python/pydantable/pandas.py" = ["F822"]
# ``__all__`` lists lazy Mongo types (``mongo_dataframe``) from ``__getattr__``.
"python/pydantable/__init__.pyi" = ["F822"]
"typings/pydantable/__init__.pyi" = ["F822"]
# ``sparkdantic`` is lazy-exported via ``__getattr__`` (optional ``[spark]`` extra).
"python/pydantable/pyspark/__init__.pyi" = ["F822"]
"typings/pydantable/pyspark/__init__.pyi" = ["F822"]
"tests/conftest.py" = ["TC003"]
"tests/io/test_docs_example_scripts.py" = ["TC003"]
"tests/io/test_scan_column_error_parsing.py" = ["E501"]
"tests/typing/test_mypy_dataframe_model_return_types.py" = ["TC003"]
"tests/typing/test_mypy_typing_contracts.py" = ["TC003"]
"tests/typing/test_pyright_dataframe_model_return_types.py" = ["TC003"]
"tests/typing/test_pyright_typing_contracts.py" = ["TC003"]

[tool.mypy]
python_version = "3.10"
mypy_path = ["python", "pydantable-protocol/python"]
explicit_package_bases = true
# OpenTelemetry (and similar PEP 420 namespace packages) can otherwise trigger
# ``AssertionError: Cannot find component 'trace' for 'opentelemetry.trace'`` in
# mypy's cross-ref fixup when analyzing transitive imports.
namespace_packages = true
# Mypy plugin enables automatic schema-evolving return typing for DataFrameModel
# transform chains. Pyright/Pylance and Astral ``ty`` rely on shipped stubs +
# ``as_model(...)`` (``ty`` does not load mypy plugins).
plugins = ["python/pydantable/mypy_plugin.py"]

# Tests use parametrized UI bases and column attrs that are Expr at runtime but
# look like optional scalars to static analysis; typecheck the package only.
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Optional runtime deps: CI python-lint job does not install them; imports are guarded.
[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "polars"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dataframe_api_compat"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dataframe_api_compat.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlmodel"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlmodel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fsspec"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kafka"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.bigquery"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "snowflake.connector"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "snowflake"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapcsv"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapfiles"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapsqlite"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.dataset"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.orc"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud"
ignore_missing_imports = true

# Optional runtime deps: installed only with `[fastapi]` / `[dev]`.
[[tool.mypy.overrides]]
module = "fastapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

# Optional: ``pydantable[sql]`` / ``moltres-core``.
[[tool.mypy.overrides]]
module = "moltres_core"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "moltres_core.*"
ignore_missing_imports = true

# Optional: ``pydantable[mongo]`` / PyMongo.
[[tool.mypy.overrides]]
module = "pymongo"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymongo.*"
ignore_missing_imports = true

# Optional: ``pydantable[mongo]`` (Beanie).
[[tool.mypy.overrides]]
module = "beanie"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "beanie.*"
ignore_missing_imports = true

# Optional: ``pydantable[spark]`` (SparkDantic JVM schema helpers).
[[tool.mypy.overrides]]
module = "sparkdantic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sparkdantic.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["python", "pydantable-protocol/python"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers"
timeout = 300
# Legacy string-SQL I/O names warn with DeprecationWarning (Phase 4, v1.13.0); existing
# tests still exercise behavior via these entrypoints. See tests/sql/test_sql_string_deprecation.py.
filterwarnings = [
    "ignore:.*is deprecated and will be removed in a future major version:DeprecationWarning",
]
markers = [
    "slow: performance guardrails (timing-based; exclude with -m 'not slow')",
    "network: uses loopback HTTP server or similar (exclude with -m 'not network')",
    "optional_cloud: requires optional cloud/extra deps (may skip via importorskip)",
    "spark: requires pyspark + a working local Java runtime",
    "asyncio: async tests (pytest-asyncio)",
]

[tool.coverage.run]
branch = true
source = ["python/pydantable"]
# Loaded by mypy only; pytest never exercises it meaningfully but it dominates stmt count.
omit = ["**/mypy_plugin.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

