[package]
name = "pydantable-core"
version = "1.19.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
name = "pydantable_core"
crate-type = ["cdylib"]

[features]
# `polars_engine`: plan execution + `io_*` file helpers (Parquet/IPC/CSV/NDJSON).
# Optional Python extras (`[polars]`, `[arrow]`, …) mirror this for dict-round-trip writes.
# Future packaging could add sub-features to trim Polars codec deps (wheel size); see docs/DEVELOPER.md.
default = ["polars_engine"]
polars_engine = ["dep:polars", "dep:polars-core", "dep:polars-io", "dep:polars-utils", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.24.1" }
polars-core = { version = "0.53.0", optional = true }
# `range` enables `int_range` for SQL-style `row_number` over windows; with `dtype-datetime`,
# Polars 0.53 also needs `timezones` (polars-plan `replace_tz` cfgs) and `dtype-array` so
# `polars-expr` matches `polars-plan` list/array IR variants.
polars = { version = "0.53.0", optional = true, features = ["lazy", "is_in", "strings", "concat_str", "is_between", "pivot", "abs", "round_series", "dtype-array", "dtype-struct", "dtype-decimal", "dtype-time", "regex", "rank", "range", "rolling_window", "timezones", "csv", "parquet", "json", "ipc", "string_pad", "string_reverse", "extract_jsonpath", "pct_change", "diff", "cum_agg", "is_unique", "is_first_distinct", "is_last_distinct", "partition_by"] }
polars-io = { version = "0.53.0", optional = true, features = ["ipc", "csv", "parquet", "json"] }
polars-utils = { version = "0.53.0", optional = true }
numpy = { version = "0.24", optional = true }
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }

[lints.clippy]
# Panicking on unwrap/expect in library code is discouraged; tests allow these lints locally.
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
