[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

 [project]
 name = "pydantable-rag"
version = "0.3.0"
 description = "FastAPI backend for chatting with a local RAG assistant about pydantable."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
  "fastapi[standard]>=0.110",
  "pydantic>=2.0,<3",
  "python-dotenv>=1.0",
  "sqlite-vec>=0.1.6",
  "numpy>=1.24",
  "openai>=1.40",
  "slowapi>=0.1.9",
]
 
 [project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.8"]

 [tool.ruff]
 line-length = 88
 target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"

[tool.setuptools]
packages = ["app"]

# Explicit entrypoint for ``fastapi dev`` / FastAPI Cloud (root ``main.py`` re-exports ``app``).
[tool.fastapi]
entrypoint = "main:app"

# Astral ``ty``: this subtree is excluded from the repo-root ``[tool.ty]`` includes;
# project root is the directory that contains the ``app`` package (not ``app`` itself).
[tool.ty.environment]
python-version = "3.11"
root = ["."]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "openai.**",
    "sqlite_vec.**",
    "slowapi.**",
    "limits.**",
    "dotenv",
    "pytest",
]

[tool.ty.rules]
deprecated = "ignore"

[tool.ty.src]
include = [
    "app/**/*.py",
    "tests/**/*.py",
]
